# django-sputnik

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
sputnik/: settings.py  urls.py  views.py
